--- a/src/components/create/ExpandedButton.scss
+++ b/src/components/create/ExpandedButton.scss
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 2;
     box-sizing: border-box;
-    transition: 0.2s;
+    // transition: 0.2s;
     &:hover {
         transform: translateY(4px);
         .composition__expanded-buttons-after {
@@ -17,7 +17,7 @@
 
     .composition__expanded-buttons-after {
         box-sizing: border-box;
-        transition: 0.2s;
+        // transition: 0.2s;
         content: '';
         position: absolute;
         width: 100%;
