--- a/src/styles/Nft.scss
+++ b/src/styles/Nft.scss
@@ -5,6 +5,8 @@
 
     .nft__exchange {
         padding: 50px 140px;
+        background: url('../assets/images/nft/nft-banner.png') no-repeat center center;
+        background-size: cover;
     }
     .nft__exchange--title {
         color: #cf0;
@@ -27,11 +29,11 @@
         font-family: Orbitron600;
         font-size: 16px;
         font-style: normal;
-        font-weight: 600;
         line-height: normal;
         width: 102px;
         height: 40px;
         border-radius: 12px;
         background: var(--primary-base, #cf0);
+        transition: 0.3s;
     }
 }
