--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -209,6 +209,9 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            span{
+              width: 40px;
+            }
           }//time-text--END--
         }//intro__slide-pc__left__sound--END--
 
