--- a/src/components/AlarmModal.scss
+++ b/src/components/AlarmModal.scss
@@ -156,3 +156,23 @@
 
 
 
+
+
+@media screen and (max-width: 768px) {
+  .alarm__modal{
+    width: 100%;
+    right: 0;
+    height: auto;
+    top: auto;
+    bottom: 0;
+    &.active{
+      right: -100%;
+    }
+    .alarm__modal__item{
+      width: 100%;
+    } 
+  }
+}
+
+
+
