--- a/src/components/IntroLogo.scss
+++ b/src/components/IntroLogo.scss
@@ -1,18 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .intro-logo{
   position: fixed;
   top:0;
@@ -21,7 +6,7 @@
   height: 100vh;
   background: #121212;
   z-index: 10;
-  animation: fadeOut 0.5s ease-out 2.4s forwards;
+  animation: fadeOut 0.3s ease-out 1.5s forwards;
   @keyframes fadeOut {
     0% {
       opacity: 1;
@@ -40,8 +25,8 @@
     height: 120px;
     &.logo{
       opacity: 0;
-      animation: logo2 0.6s ease-in-out forwards;
-      animation-delay: 0.5s;
+      animation: logo2 0.4s ease-in-out forwards;
+      animation-delay: 0.3s;
       transform: translate(100px,0);
       @keyframes logo2 {
         0%{
@@ -52,7 +37,6 @@
           opacity: 1;
           transform: translate(0,0);
         }
-
       }
     }
   }
@@ -67,7 +51,7 @@
       flex-direction: column;
       gap: 2px;
     }
-    animation: fadeOut2 0.5s ease-out 2.2s forwards;
+    animation: fadeOut2 0.3s ease-out 1.3s forwards;
     @keyframes fadeOut2 {
       0% {
         opacity: 1;
@@ -82,7 +66,6 @@
     }
   }
 
-
   svg{
       will-change: transform;
       backface-visibility: hidden;
@@ -91,62 +74,62 @@
       font-size: 46px;
       fill:transparent;
       stroke-dasharray: 326px;
-      animation: stroke 0.8s linear;
+      animation: stroke 0.5s linear;
       animation-fill-mode: forwards;
       &:nth-child(1) {
         animation-delay: 0s;
       }
       &:nth-child(2) {
-        animation-delay: 0.1s;
+        animation-delay: 0.05s;
       }
       &:nth-child(3) {
-        animation-delay: 0.2s;
+        animation-delay: 0.1s;
       }
       &:nth-child(4) {
-        animation-delay: 0.3s;
+        animation-delay: 0.15s;
       }
       &:nth-child(5) {
-        animation-delay: 0.4s;
+        animation-delay: 0.2s;
       }
       &:nth-child(6) {
-        animation-delay: 0.5s;
+        animation-delay: 0.25s;
       }
       &:nth-child(7) {
-        animation-delay: 0.6s;
+        animation-delay: 0.3s;
       }
       &:nth-child(8) {
-        animation-delay: 0.7s;
+        animation-delay: 0.35s;
       }
     }
     &:last-child{
       text{
         &:nth-child(1) {
-          animation-delay: 0.7s;
+          animation-delay: 0.35s;
         }
         &:nth-child(2) {
-          animation-delay: 0.8s;
+          animation-delay: 0.4s;
         }
         &:nth-child(3) {
-          animation-delay: 0.9s;
+          animation-delay: 0.45s;
         }
         &:nth-child(4) {
-          animation-delay: 1.0s;
+          animation-delay: 0.5s;
         }
         &:nth-child(5) {
-          animation-delay: 1.1s;
+          animation-delay: 0.55s;
         }
         &:nth-child(6) {
-          animation-delay: 1.2s;
+          animation-delay: 0.6s;
         }
         &:nth-child(7) {
-          animation-delay: 1.3s;
+          animation-delay: 0.65s;
         }
         &:nth-child(8) {
-          animation-delay: 1.35s;
+          animation-delay: 0.7s;
         }
       }
     }
-  }//svg--END--
+  }
 
 @keyframes stroke {
     0%   {
@@ -168,10 +151,7 @@
         stroke-dashoffset: 0px;
     }
   }
-}//intro-logo--END--
-
-
-
+}
 
 @media screen and (max-width: 768px) {
   .intro-logo{
