--- a/src/components/nft/NftItem.scss
+++ b/src/components/nft/NftItem.scss
@@ -77,7 +77,6 @@
         color: #f1f1f1;
         font-family: Inter400;
         font-size: 12px;
-        
     }
 
     .nft-item__images--running-time {
@@ -155,7 +154,7 @@
         text-align: center;
         font-family: Inter400;
         font-size: 10px;
-        margin-bottom: 4px
+        margin-bottom: 4px;
     }
 
     .nft-item__prices--price-value {
@@ -165,5 +164,14 @@
         font-family: Inter600;
         font-size: 14px;
         letter-spacing: 0.48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nft-item-wrap {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .nft-item-collection-wrap {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
