--- a/src/components/nft/Search.scss
+++ b/src/components/nft/Search.scss
@@ -5,6 +5,11 @@
     background-color: #0b0b0c;
     width: 100%;
     display: flex;
+    transition: 0.2s;
+
+    &.focus {
+        border-color: #cf0;
+    }
 
     .search__input {
         all: unset;
