영진 수정 컴포넌트 분리

--- a/src/components/AlarmModal.scss
+++ b/src/components/AlarmModal.scss
@@ -33,10 +33,10 @@
 
 .alarm__modal{
   position: fixed;
-  top: 0;
+  bottom: 0;
   right: 0px;
   width: 320px;
-  height: 100vh;
+  height: auto;
   z-index: 10;
   padding: 16px;
   display: flex;
