--- a/src/components/nft/NftItem.scss
+++ b/src/components/nft/NftItem.scss
@@ -304,3 +304,14 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+
+
+@media screen and (max-width: 500px) {
+    .nft-item-wrap {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .nft-item-collection-wrap {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
