--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -122,7 +122,14 @@
           font-size: 12px;
           font-style: normal;
           line-height: 100%; /* 12px */
-          letter-spacing: 0.36px;
+          &.name{
+            img{
+              width: 16px;
+              height: 16px;
+              border-radius: 100%;
+              overflow: hidden;
+            }
+          }
         }
       }//album__header__cover-info__love-play--END--
       .album__header__cover-info__btn{
