--- a/src/styles/SignUp.scss
+++ b/src/styles/SignUp.scss
@@ -96,6 +96,10 @@
       flex-direction: column;
       gap: 8px;
       padding: 8px 0;
+      .pass-txt{
+        font-size: 12px;
+        color: #00ffb3;
+      }
       .input-box__title {
         color: var(--primary-200, #a9d400);
         font-family: Inter400;
