--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -10,7 +10,7 @@
   background: url('../assets/images/intro/intro_bg.png') center no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  
   overflow: hidden;
   padding: 40px 16px;
   
@@ -23,6 +23,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    // gap: 80px;
   }//intro__inner--END--
   .intro__number{
     width: 100%;
@@ -103,6 +104,7 @@
     height: 500px;
     overflow: hidden;
     opacity: 1;
+    margin: 80px 0;
     .intro__slide-pc__left{
       width: 300px;
       flex-shrink: 0;
