--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -205,6 +205,7 @@
               display: flex;
               align-items: center;
               justify-content: space-between;
+
               p{
                 color: var(--Text-music-title, #F1F1F1);
                 font-family: Inter500;
@@ -219,7 +220,9 @@
                 font-size: 12px;
                 font-style: normal;
                 line-height: 100%; /* 12px */
-                letter-spacing: 0.36px;
+                display: flex;
+                align-items: center;
+                gap: 8px;
               }
             }//menu__box__my-page__info__bottom__box--END--
           }//menu__box__my-page__info__bottom--END--
