--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -349,20 +349,26 @@
           display: flex;
           flex-direction: column;
           gap: 8px;
-          padding: 8px 0;
+          // padding: 8px 0;
           flex: 1;
           .album__content-list__list__item__right__title {
             color: var(--Text-music-title, #f1f1f1);
             font-family: Inter400;
             font-size: 14px;
             font-style: normal;
-            line-height: 100%; /* 14px */
             text-align: left;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            word-break: break-word;
+            min-height: 34px;
           } //album__content-list__list__item__right__title--END--
           .album__content-list__list__item__right__love-play {
             display: flex;
             align-items: start;
-            gap: 12px;
+            gap: 8px;
             flex-direction: column;
             img {
               width: 16px;
@@ -390,7 +396,7 @@
             align-items: start;
             justify-content: space-between;
             flex-direction: column;
-            gap: 16px;
+            gap: 18px;
             .album__content-list__list__item__right__user__info {
               display: flex;
               align-items: center;
@@ -644,8 +650,11 @@
             font-family: Inter400;
             font-size: 14px;
             font-style: normal;
-            line-height: 100%; /* 14px */
             text-align: left;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 100%;
           } //swiper-music-list__item__right__title--END--
           .swiper-music-list__item__right__love-play {
             display: flex;
@@ -656,6 +665,7 @@
               height: 16px;
             }
             p {
+              width: 52px;
               display: flex;
               align-items: center;
               gap: 4px;
