--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -91,7 +91,7 @@
             transition: 0.3s;
             opacity: 0;
             overflow: auto;
-
+            border-radius: 24px;
             pre{
               width: 100%;
               min-height: 100%;
