--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -223,6 +223,10 @@
                 display: flex;
                 align-items: center;
                 gap: 8px;
+                img{
+                  width: 14px;
+                  height: 14px;
+                }
               }
             }//menu__box__my-page__info__bottom__box--END--
           }//menu__box__my-page__info__bottom--END--
