--- a/src/components/AlarmModal.scss
+++ b/src/components/AlarmModal.scss
@@ -1,21 +1,21 @@
-.alarm__modal__arr{
+.alarm__modal__arr {
   width: 26px;
   height: 26px;
   padding: 4px;
   border-radius: 4px;
-  background:url('../assets/images/alarm.png') center no-repeat #CF0;
+  background: url("../assets/images/alarm.png") center no-repeat #cf0;
   background-size: 20px 20px;
   position: fixed;
   right: -30px;
   bottom: 70px;
   cursor: pointer;
   transition: 0.3s;
-  &.active{
+  &.active {
     right: 16px;
   }
-}//alarm__modal__arr--END--
+} //alarm__modal__arr--END--
 
-.alarm__modal{
+.alarm__modal {
   position: fixed;
   bottom: 0;
   right: 0px;
@@ -28,29 +28,29 @@
   justify-content: flex-end;
   gap: 16px;
   transition: 0.3s;
-  &.active{
+  &.active {
     right: -330px;
   }
-  .alarm__modal__item{
+  .alarm__modal__item {
     width: 100%;
     // height: 120px;
     border-radius: 4px;
-    border: 1px solid #CF0;
+    border: 1px solid #cf0;
     padding: 16px;
     background: #121212;
     position: relative;
-    .alarm__modal__item__closed{
+    .alarm__modal__item__closed {
       position: absolute;
       right: 16px;
       top: 16px;
       width: 10px;
       height: 10px;
-      img{
+      img {
         width: 100%;
         height: 100%;
       }
     }
-    .alarm__modal__item__title{
+    .alarm__modal__item__title {
       width: 90%;
       margin: 0 auto;
       text-align: center;
@@ -58,32 +58,36 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }//alarm__modal__item__title--END--
-    .alarm__modal__item__txt{
+    } //alarm__modal__item__title--END--
+    .alarm__modal__item__txt {
       text-align: center;
       font-size: 12px;
       margin-top: 12px;
-      .err-txt{
+      .err-txt {
         color: red;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: pre-wrap;
+        word-wrap: break-word;
       }
-    }//alarm__modal__item__txt--END--
-    .alarm__modal__item__link{
+    } //alarm__modal__item__txt--END--
+    .alarm__modal__item__link {
       width: 100%;
       height: 32px;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #CF0;
+      background: #cf0;
       border-radius: 4px;
       margin-top: 8px;
       color: #121212;
       font-size: 12px;
       transition: 0.3s;
-      &:hover{
-        box-shadow: 0px 0px 12px 0px #CF0;
+      &:hover {
+        box-shadow: 0px 0px 12px 0px #cf0;
       }
-    }//alarm__modal__item__link--END--
-    .middle2{
+    } //alarm__modal__item__link--END--
+    .middle2 {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -134,45 +138,36 @@
       }
       50% {
         transform: scaleY(1);
-        background: #CF0;
+        background: #cf0;
       }
       100% {
         transform: scaleY(0.1);
         background: transparent;
       }
     }
+  } //alarm__modal__item--END--
 
-  }//alarm__modal__item--END--
-
-
-  .alarm__modal__item__timer{
+  .alarm__modal__item__timer {
     margin: 0 auto;
     text-align: center;
     font-size: 14px;
-    color: #CF0;
+    color: #cf0;
     margin-top: 12px;
-  }//alarm__modal__item__timer--END--
-}//alarm__modal--END--
-
-
-
-
+  } //alarm__modal__item__timer--END--
+} //alarm__modal--END--
 
 @media screen and (max-width: 768px) {
-  .alarm__modal{
+  .alarm__modal {
     width: 100%;
     right: 0;
     height: auto;
     top: auto;
     bottom: 0;
-    &.active{
+    &.active {
       right: -100%;
     }
-    .alarm__modal__item{
+    .alarm__modal__item {
       width: 100%;
-    } 
+    }
   }
 }
-
-
-
