--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -422,6 +422,11 @@
       margin-right: 8px !important;
     }
   } //replyBtn--END--
+  .no-comDiv{
+    margin-top: 0;
+    margin-bottom: 40px;
+    color: #555;
+  }//no-comDiv--END--
   border-radius: 12px;
   border: 1px solid var(--Color-03, #222);
   padding: 16px;
