영진 수정 - pre 수정

--- a/src/components/LyricsModal.scss
+++ b/src/components/LyricsModal.scss
@@ -22,6 +22,10 @@
         display: -webkit-box;  
         max-height: 600px;
         overflow-y: auto;
+        .lyrics__content{
+          background: transparent;
+          width: 100%;
+        }
       }
     }
   }
