가사 생성 수정 ㅗ안료

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -215,6 +215,7 @@
                 letter-spacing: 0.36px;
               }
               span{
+                width: 48px;
                 color: var(--Text-music-sub, #AAA);
                 font-family: Inter500;
                 font-size: 12px;
