--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -302,6 +302,18 @@
     overflow: hidden;
     min-height: 136px;
     .album-detail__audio__cover {
+      &::before{
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #000;
+        opacity: 0.2;
+        border-radius: 100%;
+        z-index: 10;
+      }
       content: "";
       width: 200px;
       height: 200px;
@@ -554,9 +566,10 @@
       td {
         &.user-info {
           p {
+            padding: 0 16px 0 0;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: start;
             gap: 8px;
             color: #aaa;
             text-align: center;
@@ -586,6 +599,7 @@
         &:nth-child(3) {
           width: 340px;
           p {
+            text-indent: 16px;
             width: 300px;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -930,7 +944,11 @@
 
 .rhap_download-progress {
   width: 100% !important;
+  background: #333;
 } //rhap_download-progress--END--
+.rhap_progress-filled{
+  background: #a9d400;
+}//.rhap_progress-filled--END--
 
 @media screen and (max-width: 1600px) {
   .album {
