영진 수정 - 티커 정렬 마이페이지 정렬 테이블 정렬

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -191,6 +191,10 @@
                 font-size: 14px;
                 font-style: normal;
               }
+              img{
+                width: 16px;
+                height: 16px;
+              }
             }//menu__box__my-page__info__top__txt--END--
           }//menu__box__my-page__info__top--END--
           .menu__box__my-page__info__bottom{
