--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -61,3 +61,15 @@
         margin-bottom: 40px;
     }
 }
+
+
+
+
+@media screen and (max-width: 410px) {
+    .create__lyric-lab{
+        .generated-lyrics__lyrics{
+            font-size: 12px;
+        }
+    }
+}
+
