--- a/src/components/nft/NftOverview.scss
+++ b/src/components/nft/NftOverview.scss
@@ -41,6 +41,10 @@
                 font-size: 16px;
                 font-style: normal;
                 line-height: normal;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
             }
             &.long {
                 grid-column: 1 / -1;
