--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -401,6 +401,10 @@
   } //album-detail__audio--END--
 } //album-detail__audio--END--
 
+
+.album-detail__rank-table .advanced-overlay{
+  overflow: auto;
+}
 .album-detail__rank-table {
   .advanced-overlay {
     gap: 8px !important;
@@ -410,6 +414,10 @@
   }
   .infoStyle {
     margin-top: 12px !important;
+    p{
+      word-wrap: break-word;
+      word-break: break-all;
+    }
   }
   .userLink {
     .imgdefault {
@@ -434,10 +442,15 @@
       margin-right: 8px !important;
     }
   } //replyBtn--END--
+  .public-DraftStyleDefault-ltr{
+    font-size: 14px;
+  }
   .no-comDiv{
-    margin-top: 0;
+    margin-top: 32px;
     margin-bottom: 40px;
     color: #555;
+    text-align: center;
+    font-size: 14px;
   }//no-comDiv--END--
   border-radius: 12px;
   border: 1px solid var(--Color-03, #222);
@@ -1007,14 +1020,18 @@
               }
               min-height: auto;
               dt {
-                font-size: 12px;
+                font-size: 10px;
                 min-width: 100px;
                 min-height: 30px;
               }
               dd {
+                font-size: 10px;
                 padding: 0;
                 padding-left: 24px;
                 padding-right: 8px;
+                span {
+                  font-size: 10px;
+                }
               }
             }
           }
