--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -527,7 +527,7 @@
                         span{
                             color: var(--Dark-Color-07, var(--Color-07, #A3A3A3));
                             font-family: Inter500;
-                            font-size: 8px;
+                            font-size: 12px;
                             font-style: normal;
                         }
                     }
@@ -629,6 +629,19 @@
 }
 
 @media screen and (max-width: 768px) {
+    .nft-item-detail__song-detail{
+        .nft-item-detail__song-detail__bot{
+            .nft-item-detail__song-detail__right{
+                .nft-item-detail__song-detail__right__value-box{
+                    flex-direction: column;
+                    dl{
+                        width: 100%;
+                        padding: 8px 0;
+                    }
+                }
+            }
+        }
+    }
     .nft-item-detail {
         .nft-item-detail-info__data--texts {
             .texts__desc {
