--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -370,6 +370,8 @@
         display: flex;
         align-items: center;
         gap: 16px;
+        width: 100%;
+        flex-direction: column;
         &.two {
           flex-direction: column;
           .tag-input-comment-button {
@@ -380,9 +382,11 @@
           position: static;
           transform: translate(0);
           // margin: 16px 0 8px auto;
+          width: 100%;
           .tag-input-comment-button {
             margin-left: auto;
-            width: 80px;
+            // width: 80px;
+            width: 100%;
           }
         }
       }
