영진 수정 - 에딧 수정 메인 love icon 수정

--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -4,6 +4,7 @@
         width: 100%;
         resize: none;
         min-height: 900px;
+        max-height: 880px;
         // overflow: ;
     }
 
