--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -3,9 +3,14 @@
         background-color: transparent;
         width: 100%;
         resize: none;
-        min-height: 900px;
-        max-height: 880px;
+        min-height: 600px;
+        max-height: 600px;
+        // overflow: auto;
         // overflow: ;
+        textarea{
+            // min-height: 600px;
+            // max-height: 600px;
+        }
     }
 
     .generated-lyrics__confirm-buttons {
