--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -4,7 +4,8 @@
     width: 100%;
     resize: none;
     min-height: 600px;
-    max-height: 600px;
+    // max-height: 600px; // 임시
+    max-height: 100%;
     // overflow: auto;
     // overflow: ;
     textarea {
