--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -5,7 +5,7 @@
         resize: none;
         min-height: 600px;
         max-height: 600px;
-        // overflow: auto;
+        overflow: auto;
         // overflow: ;
         textarea{
             // min-height: 600px;
