--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -69,7 +69,7 @@
     color: #fff;
   }
 
-  .bot {
+  .assistant {
     align-self: flex-start;
     background-color: #444;
     border: 1px solid #555;
