--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -1,85 +1,85 @@
 .albums-table {
-  width: 100%;
-  border-radius: 12px;
-  border: 1px solid var(--Color-03, #222);
-  overflow: auto;
-  table{
     width: 100%;
-    padding: 12px 16px;
-    margin: 0 auto;
-    border-collapse: collapse;
-    min-width: 860px;
-  }
-  thead {
-    border-bottom: 1px solid var(--stroke-stroke, #232323);
-    border-radius: 12px 12px 0px 0px;
-    background: linear-gradient(
-      0deg,
-      rgba(199, 240, 100, 0.2) 0%,
-      rgba(114, 138, 58, 0) 20%
-    );
-    tr {
-      height: 40px;
-      padding: 12px 16px;
-      gap: 16px;
-      align-items: center;
-      align-self: stretch;
-      th {
-        color: var(--primary-200, #a9d400);
-        text-align: center;
-        font-family: Orbitron400;
-        font-size: 14px;
-        font-style: normal;
-        line-height: normal;
-        white-space: nowrap;
-        &:last-child {
-          padding-right: 0;
-        }
-      }
+    border-radius: 12px;
+    border: 1px solid var(--Color-03, #222);
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding-bottom: 16px;
+    table {
+        width: 100%;
+        padding: 12px 16px;
+        margin: 0 auto;
+        border-collapse: collapse;
+        min-width: 860px;
     }
-  }
-  tbody {
-    tr {
-      height: 50px;
-      padding: 12px 16px;
-      gap: 16px;
-      align-items: center;
-      align-self: stretch;
-      td {
-        color: var(--Text-music-sub, #aaa);
-        text-align: center;
-        font-family: Inter400;
-        font-size: 14px;
-        font-style: normal;
-        line-height: normal;
-        &:first-child {
-          width: 40px;
-        }
-        .td-content {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          .albums-table__detail-btn {
-            color: var(--Text-music-sub, #aaa);
-            font-family: Inter500;
-            font-size: 12px;
-            font-style: normal;
-            line-height: 100%; /* 12px */
-            letter-spacing: 0.36px;
-            display: flex;
-            width: 100px;
-            padding: 8px 12px;
-            justify-content: center;
+    thead {
+        border-bottom: 1px solid var(--stroke-stroke, #232323);
+        border-radius: 12px 12px 0px 0px;
+        background: linear-gradient(0deg, rgba(199, 240, 100, 0.2) 0%, rgba(114, 138, 58, 0) 20%);
+        tr {
+            height: 40px;
+            padding: 12px 16px;
+            gap: 16px;
             align-items: center;
-            gap: 8px;
-            border-radius: 12px;
-            background: var(--Color-03, #222);
-          }
+            align-self: stretch;
+            th {
+                color: var(--primary-200, #a9d400);
+                text-align: center;
+                font-family: Orbitron400;
+                font-size: 14px;
+                font-style: normal;
+                line-height: normal;
+                white-space: nowrap;
+                &:last-child {
+                    padding-right: 0;
+                }
+            }
         }
-      }
-      &:hover {
-        background: var(--Color-04, #383838);
-      }
     }
-  }
+    tbody {
+        tr {
+            height: 50px;
+            padding: 12px 16px;
+            gap: 16px;
+            align-items: center;
+            align-self: stretch;
+            td {
+                color: var(--Text-music-sub, #aaa);
+                text-align: center;
+                font-family: Inter400;
+                font-size: 14px;
+                font-style: normal;
+                line-height: normal;
+                &:first-child {
+                    width: 40px;
+                }
+                .td-content {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .albums-table__detail-btn {
+                        color: var(--Text-music-sub, #aaa);
+                        font-family: Inter500;
+                        font-size: 12px;
+                        font-style: normal;
+                        line-height: 100%; /* 12px */
+                        letter-spacing: 0.36px;
+                        display: flex;
+                        width: 100px;
+                        padding: 8px 12px;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 8px;
+                        border-radius: 12px;
+                        background: var(--Color-03, #222);
+                    }
+                }
+            }
+            &:hover {
+                background: var(--Color-04, #383838);
+            }
+        }
+    }
 }
