경세 컴포넌트

--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -38,6 +38,7 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
+        text-transform: capitalize;
         .albums__item {
             display: flex;
             flex-direction: column;
