영진 수정 - 카피 링크 버튼 수정 완료

--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -138,7 +138,13 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            button {
+            p{
+              cursor: pointer;
+              &.play{
+                cursor: auto;
+              }
+            }
+            button ,p{
               width: 66px;
               display: flex;
               align-items: center;
