--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -150,6 +150,30 @@
         }
       }
     }
+    .music__information__title,
+    .music__information__prompt {
+      margin-bottom: 16px;
+      h3 {
+        margin-bottom: 8px;
+        color: #fff;
+      }
+
+      input {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #555;
+        border-radius: 4px;
+        background-color: #222;
+        color: #fff;
+        box-sizing: border-box;
+      }
+    }
+    .music__information__lyric {
+      height: auto;
+      textarea {
+        height: auto;
+      }
+    }
 
     &__buttons {
       flex: 1;
