영진 수정 카피 아이콘 수정2

--- a/src/components/ShareModal.scss
+++ b/src/components/ShareModal.scss
@@ -28,7 +28,7 @@
     }
     .share-modal__link__btn{
       border-radius: 4px;
-      background: #30F;
+      background: #cf0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -41,7 +41,7 @@
       height: 28px;
       transition: 0.3s;
       &:hover{
-        box-shadow: 0px 0px 12px 0px #30F;
+        box-shadow: 0px 0px 12px 0px #cf0;
       }
     }
   }//share-modal__link--END--
